--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,18 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+<!--        <dependency>        -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
