--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=web-flux-reactif
 spring.data.mongodb.uri=mongodb://localhost:27017/db_bourse
+spring.thymeleaf.cache=false
 
